--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "private": true,
   "dependencies": {
     "antd": "^3.7.1",
+    "axios": "^0.18.0",
     "connected-react-router": "^4.3.0",
+    "dotenv": "^6.0.0",
     "history": "^4.7.2",
     "moment": "^2.22.2",
+    "mtgsdk": "^0.3.0",
     "react": "^16.3.2",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.3.2",
