--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-spinners": "^0.3.3",
     "react-table": "^6.8.6",
     "redux": "^4.0.0",
+    "redux-persist": "^5.10.0",
     "redux-thunk": "^2.2.0"
   },
   "scripts": {
