--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "redux-logger": "^3.0.6",
     "redux-observable": "^1.0.0",
     "redux-persist": "^5.10.0",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "rickshaw": "^1.6.6"
   },
   "scripts": {
     "start": "react-scripts start",
