--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "axios": "^0.18.0",
     "connected-react-router": "^4.3.0",
     "dotenv": "^6.0.0",
+    "geoip-lite": "^1.3.1",
     "history": "^4.7.2",
+    "ip": "^1.1.5",
     "moment": "^2.22.2",
+    "public-ip": "^2.4.0",
     "qs": "^6.5.2",
     "react": "^16.3.2",
     "react-bootstrap": "^0.32.1",
