--- a/package.json
+++ b/package.json
@@ -40,6 +40,13 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "webpack-bundle-analyzer": "^2.13.1"
+    "babel-loader": "^7.1.5",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "webpack": "^4.16.4",
+    "webpack-bundle-analyzer": "^2.13.1",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.5"
   }
 }
